Fixing alignment of prev/next buttons for related post carousel

--- a/assets/styles/components/_related-posts.scss
+++ b/assets/styles/components/_related-posts.scss
@@ -27,6 +27,7 @@
       bottom: -70px;
       display: flex;
       transform: none;
+      align-items: center;
 
       span {
         @include headline-four;
